# minecraft-bot

./: Dockerfile  pyproject.toml
.github/workflows/: deployment.yml
app/: main.py  settings.py
app/api/: factory.py
app/discord/: factory.py
app/discord/modals/: form.py
app/discord/views/: register.py
app/enums/: service_type.py
app/messages/: environment.py  form.py
app/models/: registration.py
app/services/: telegram.py
app/telegram/: factory.py
app/telegram/handlers/: __init__.py  form.py  start.py  verification.py
app/telegram/keyboards/: start.py  verification.py
app/telegram/keyboards/types/: confirm_user.py
app/telegram/states/: form.py
app/types/: form.py
