[tool.poetry]
name = "minecraft"
version = "0.1.0"
description = ""
authors = ["Kulunchick <nikolikrasovski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
fastapi = "^0.109.0"
aiogram-dialog = "^2.1.0"
pydantic-settings = "^2.1.0"
uvicorn = "^0.25.0"
discord-py = "^2.3.2"
jinja2 = "^3.1.3"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
alembic = "^1.13.1"


[tool.poetry.group.dev.dependencies]
ngrok = "^0.12.1"
ruff = "^0.1.13"
mypy = "^1.8.0"
types-cachetools = "^5.3.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
